syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  //自定义
  rpc GetName (HelloRequest) returns (HelloReply);
  // 通过一元方式传输
  rpc SayHello (HelloRequest) returns (HelloReply);
  // 通过客户端流的方式传输
  rpc SayHelloClientStream (stream HelloRequest) returns (HelloReply);
  //通过服务端流的方式传输
  rpc SayHelloServerStream (HelloRequest) returns (stream HelloReply);
  //通过双向流的方式传输
  rpc SayHelloStream (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}